update to new hmmer version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "libhmmer-sys"
-version = "0.4.0"
-edition = "2018"
+name = "libhmmer-sys-2"
+version = "0.1.0"
+edition = "2021"
 links = "hmmer"
 description = "Rust bindings to libhmmer and libeasel"
-repository = "https://github.com/mustafa-guler/libhmmer-sys"
-categories = ["external-ffi-bindings", "science"]
+repository = "https://github.com/jianshu93/libhmmer-sys"
+categories = ["external-ffi-bindings", "science", "hmm"]
 license = "BSD-3-Clause"
 readme = "README.md"
 
